--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             في السوق المحلي والعالمي.
           </p>
           <div class="d-flex justify-content-center gap-3 flex-wrap animate delay-3">
-            <a href="#contact" class="btn btn-primary custom-btn">تواصل معنا</a>
+            <a href="./contact.html" class="btn btn-primary custom-btn">تواصل معنا</a>
             <a href="#about" class="btn btn-outline-dark">اعرف المزيد</a>
           </div>
         </div>
@@ -187,7 +187,7 @@
           <h5 class="service-title">الدعاية والإعلان</h5>
           <p class="service-text">نصمم وننفذ حملات دعائية مبتكرة تعزز حضور علامتك التجارية.</p>
           <p class="small">ما الذي يتضمنه هذه الخدمة؟</p>
-          <a href="" class="btn btn-service">اعرف المزيد</a>
+          <a href="./service1.html" class="btn btn-service">اعرف المزيد</a>
         </div>
       </div>
 
@@ -304,7 +304,7 @@
     <h2 class="cta-title mb-4 cta-animate delay-1" >
       هل تريد معرفة المزيد من التفاصيل حول خدماتنا وأسعارنا؟
     </h2>
-    <a href="#contact" class="btn btn-cta cta-animate delay-2">احصل على عرض</a>
+    <a href="./contact.html" class="btn btn-cta cta-animate delay-2">احصل على عرض</a>
   </div>
 </section>
 
@@ -619,10 +619,9 @@
     <div id="footer"></div>
     
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
-
