--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div id="navbar"></div>
@@ -601,7 +601,7 @@
     <h2 class="cta-title mb-4 cta-animate delay-1" >
         نحن هنا لندعمك...تواصل معنا وابدأ أولي خطواتك نحو التميز.
     </h2>
-    <a href="#contact" class="btn btn-cta cta-animate delay-2">تواصل معنا</a>
+    <a href="./contact.html" class="btn btn-cta cta-animate delay-2">تواصل معنا</a>
   </div>
 </section>
 
