--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- ملفات CSS -->
-       <link rel="stylesheet" href="style.css" />
+       <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/contact.css">
 </head>
 
@@ -32,7 +32,7 @@
   <div class="hero-content">
     <h1>نسعد دائمًا بالتواصل معك</h1>
     <p>تحدث معنا وابدأ رحلتك نحو رؤية مبتكرة تعكس طموحاتك.</p>
-    <a class="whatsapp-btn" href="https://wa.me/201098324080" target="_blank" rel="noopener">
+    <a class="whatsapp-btn" href="https://wa.me/+966553767865" target="_blank" rel="noopener">
       <i class="fab fa-whatsapp"></i> تحدث عبر واتساب
     </a>
   </div>
@@ -47,14 +47,14 @@
           <div class="info-box">
             <i class="fas fa-map-marker-alt"></i>
             <h5>العنوان</h5>
-            <p>القاهرة، مصر — شارع الحرية الرئيسي</p>
+            <p>الوجه - املج-ينبع</p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="info-box">
             <i class="fas fa-phone"></i>
             <h5>الهاتف</h5>
-            <p>+966553767</p>
+            <p>0536422477-0553767865</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -69,23 +69,25 @@
       <div class="row g-5 align-items-start">
         <div class="col-lg-6">
           <div class="contact-form">
-            <form>
+            <form id="contact-form">
               <div class="mb-3">
                 <label for="name" class="form-label">الاسم الكامل</label>
-                <input type="text" class="form-control" id="name" placeholder="اكتب اسمك هنا" required>
+                <input type="text" class="form-control" id="name" name="name" placeholder="اكتب اسمك هنا" required>
               </div>
 
               <div class="mb-3">
                 <label for="email" class="form-label">البريد الإلكتروني</label>
-                <input type="email" class="form-control" id="email" placeholder="اكتب بريدك الإلكتروني" required>
+                <input type="email" class="form-control" id="email" name="email" placeholder="اكتب بريدك الإلكتروني" required>
               </div>
 
               <div class="mb-3">
                 <label for="message" class="form-label" >الرسالة</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="اكتب رسالتك هنا" required></textarea>
+                <textarea class="form-control" id="message" name="message" rows="5" placeholder="اكتب رسالتك هنا" required></textarea>
               </div>
 
               <button type="submit" class="btn-send">إرسال الرسالة</button>
+
+              <p id="form-status" class="mt-3 fw-bold"></p>
             </form>
           </div>
         </div>
@@ -109,5 +111,38 @@
   <!-- Scripts -->
   <script type="module" src="./js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  (function() {
+    emailjs.init("YOUR_PUBLIC_KEY"); 
+  })();
+
+  document.getElementById('contact-form').addEventListener('submit', function(event) {
+    event.preventDefault();
+
+    emailjs.sendForm('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', this)
+      .then(() => {
+        alert('✅ تم إرسال رسالتك بنجاح! سنتواصل معك قريبًا.');
+        this.reset();
+      }, (error) => {
+        alert('❌ حدث خطأ أثناء الإرسال. حاول مرة أخرى.');
+        console.log('Error:', error);
+      });
+  });
+  const status = document.getElementById('form-status');
+
+emailjs.sendForm('SERVICE_ID', 'TEMPLATE_ID', this)
+  .then(() => {
+    status.textContent = "✅ تم إرسال رسالتك بنجاح!";
+    status.className = "success";
+    this.reset();
+  })
+  .catch(() => {
+    status.textContent = "❌ حدث خطأ أثناء الإرسال، حاول مرة أخرى.";
+    status.className = "error";
+  });
+
+</script>
+
 </body>
 </html>
