update on index

--- a/Decor.html
+++ b/Decor.html
@@ -16,7 +16,7 @@
 
   <!-- ملفات CSS -->
   <link rel="stylesheet" href="./css/style.css" />
-  <link rel="stylesheet" href="./css/events.css" />
+  <link rel="stylesheet" href="./css/Decor.css" />
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     <div class="hero-overlay"></div>
     <div class="hero-container container text-center text-white ">
       <div class="hero-left animate-left ">
-        <h1>تنظيم الحفلات و المهرجنات </h1>
+        <h1> الديكور </h1>
       </div>
       <div class="hero-right animate-right">
         <h2>كل فعالية هي قصة جديدة تُروى</h2>
@@ -45,7 +45,7 @@
   <!-- Services Section -->
   <section class="media-offer-section py-5">
     <div class="container text-center">
-      <h2 class="section-title mb-5 animate delay-1">خدمات إدارة الفعاليات</h2>
+      <h2 class="section-title mb-5 ">خدمات إدارة الفعاليات</h2>
 
       <div class="cards-grid row g-4 justify-content-center">
 
