--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <div class="icon-box mb-3" >
             <i class="fas fa-bullhorn"></i>
           </div>
-          <h5 class="service-title">الدعاية والإعلان</h5>
+          <h5 class="service-title"> الهويةالموحدة</h5>
           <p class="service-text">نصمم وننفذ حملات دعائية مبتكرة تعزز حضور علامتك التجارية.</p>
           <p class="small">ما الذي يتضمنه هذه الخدمة؟</p>
           <a href="./service1.html" class="btn btn-service">اعرف المزيد</a>
@@ -197,7 +197,7 @@
           <div class="icon-box mb-3">
             <i class="fas fa-pen-nib"></i>
           </div>
-          <h5 class="service-title">التصميم الجرافيكي</h5>
+          <h5 class="service-title">التصميم الاحترافي </h5>
           <p class="service-text">إبداع بصري يعكس هوية شركتك ويجذب عملاءك بشكل مميز.</p>
           <p class="small">ما الذي يتضمنه هذه الخدمة؟</p>
           <a href="#" class="btn btn-service">اعرف المزيد</a>
@@ -210,7 +210,7 @@
           <div class="icon-box mb-3">
             <i class="fas fa-chart-line"></i>
           </div>
-          <h5 class="service-title">التسويق الرقمي</h5>
+          <h5 class="service-title"> بناء وتصميم العلامة التجارية </h5>
           <p class="service-text">استراتيجيات تسويق عبر الإنترنت لتحقيق أقصى تأثير ونتائج.</p>
           <p class="small">ما الذي يتضمنه هذه الخدمة؟</p>
           <a href="#" class="btn btn-service">اعرف المزيد</a>
@@ -223,7 +223,7 @@
           <div class="icon-box mb-3">
             <i class="fas fa-video"></i>
           </div>
-          <h5 class="service-title">إنتاج الفيديو</h5>
+          <h5 class="service-title">التصميم الرقمي و الجرافيكي </h5>
           <p class="service-text">إنتاج فيديوهات احترافية للتسويق والترويج لعلامتك التجارية.</p>
           <p class="small">ما الذي يتضمنه هذه الخدمة؟</p>
           <a href="#" class="btn btn-service">اعرف المزيد</a>
@@ -236,7 +236,7 @@
           <div class="icon-box mb-3">
             <i class="fas fa-globe"></i>
           </div>
-          <h5 class="service-title">تصميم المواقع</h5>
+          <h5 class="service-title"> الطباعة والحلول الدعائية والاعلانية </h5>
           <p class="service-text">بناء مواقع احترافية متجاوبة تلبي احتياجات عملك.</p>
           <p class="small">ما الذي يتضمنه هذه الخدمة؟</p>
           <a href="#" class="btn btn-service">اعرف المزيد</a>
@@ -249,7 +249,7 @@
           <div class="icon-box mb-3">
             <i class="fas fa-lightbulb"></i>
           </div>
-          <h5 class="service-title">الاستشارات التسويقية</h5>
+          <h5 class="service-title"> الاستندات </h5>
           <p class="service-text">نمنحك الرؤية والاستراتيجية الأنسب لتطوير أعمالك.</p>
           <p class="small">ما الذي يتضمنه هذه الخدمة؟</p>
           <a href="#" class="btn btn-service">اعرف المزيد</a>
@@ -261,7 +261,7 @@
           <div class="icon-box mb-3">
             <i class="fas fa-lightbulb"></i>
           </div>
-          <h5 class="service-title">الاستشارات التسويقية</h5>
+          <h5 class="service-title"> لوحات الطرق  </h5>
           <p class="service-text">نمنحك الرؤية والاستراتيجية الأنسب لتطوير أعمالك.</p>
           <p class="small">ما الذي يتضمنه هذه الخدمة؟</p>
           <a href="#" class="btn btn-service">اعرف المزيد</a>
@@ -273,7 +273,7 @@
           <div class="icon-box mb-3">
             <i class="fas fa-lightbulb"></i>
           </div>
-          <h5 class="service-title">الاستشارات التسويقية</h5>
+          <h5 class="service-title"> الدروع التذكارية </h5>
           <p class="service-text">نمنحك الرؤية والاستراتيجية الأنسب لتطوير أعمالك.</p>
           <p class="small">ما الذي يتضمنه هذه الخدمة؟</p>
           <a href="#" class="btn btn-service">اعرف المزيد</a>
@@ -285,7 +285,7 @@
           <div class="icon-box mb-3">
             <i class="fas fa-lightbulb"></i>
           </div>
-          <h5 class="service-title">الاستشارات التسويقية</h5>
+          <h5 class="service-title"> الهدايا الدعاية </h5>
           <p class="service-text">نمنحك الرؤية والاستراتيجية الأنسب لتطوير أعمالك.</p>
           <p class="small">ما الذي يتضمنه هذه الخدمة؟</p>
           <a href="#" class="btn btn-service">اعرف المزيد</a>
